# antibioprophylaxie-LLM-benchmark

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.kiro/specs/dotenv-api-keys/: .config.kiro  requirements.md  tasks.md
.kiro/specs/llm-benchmark/: design.md  requirements.md  tasks.md
.kiro/specs/script-architecture-violation/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/steering/: architecture.md  contributing.md
_bmad/: README.md
_bmad/_config/: bmad-help.csv
_bmad/bmm/agents/: analyst.md
_bmad/core/: config.yaml
bmad/: config.yaml
bmad/outputs/: brainstorm-session.md  research-benchmark-design.md  research-multi-approach.md  research-publication-strategy.md  research-scoring-methods.md
config/: models.yaml
datasets/sfar_antibioprophylaxie/: benchmark.json  benchmark.md  json_to_md.py  md_to_json.py  metadata.yaml
docs/: Brainstorm2.md  abstract-sfar-2026.md  architecture.md  bmad-kickoff.md  bmm-workflow-status.yaml  llm-eval-frameworks-comparison.md  prd.md  product-brief.md  s-019-analyst-handoff.md  s-019.md  test_report.json
docs/abstract-sfar-2026/: abstract.md
notebooks/: benchmark_figures.py  explore_results.py  test_report.py
research/: benchmark.json
scripts/: benchmark_md_to_json.py  generate_pipeline_figure.py  run_benchmark.py  run_experiment.py
src/llm_benchmark/: __init__.py
src/llm_benchmark/adapters/approaches/: __init__.py  long_context.py  simple_prompt.py
src/llm_benchmark/adapters/exports/: __init__.py  csv_export.py  figures.py  json_export.py
src/llm_benchmark/adapters/llms/: __init__.py  litellm_adapter.py
src/llm_benchmark/cli/: main.py
src/llm_benchmark/config/: loader.py
src/llm_benchmark/domain/: dataset_loader.py  engine.py  entities.py  exceptions.py  metrics.py  scorer.py  value_objects.py
src/llm_benchmark/ports/: __init__.py  approach.py  carbon_tracker.py  export.py  llm.py
src/llm_benchmark/usecases/: run_experiment.py
tests/property/: test_dataset_loader_properties.py  test_dotenv_properties.py  test_engine_properties.py  test_export_properties.py  test_scorer_properties.py  test_script_architecture.py  test_value_objects_properties.py
tests/unit/: test_cli.py  test_config_loader.py  test_dataset_loader.py  test_dotenv_loader.py  test_engine.py  test_entities.py  test_export_adapters.py  test_litellm_adapter.py  test_long_context_approach.py  test_metrics.py  test_scorer.py  test_simple_prompt_approach.py  test_value_objects.py
tests/unit/scripts/: test_run_benchmark.py
